Updates to image combination

--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -33,7 +33,8 @@
     "from matplotlib import pyplot as plt\n",
     "from matplotlib import rc\n",
     "\n",
-    "from astropy.visualization import hist"
+    "from astropy.visualization import hist\n",
+    "from astropy.stats import mad_std"
    ]
   },
   {
@@ -124,7 +125,7 @@
    "source": [
     "fig, axes = plt.subplots(1, 3, sharey=True, tight_layout=True, figsize=(20, 10))\n",
     "data_source = [bits[0, :], average, median]\n",
-    "titles = ['One distrbution', 'Average', 'Median']\n",
+    "titles = ['One distrbution', 'Average of {n}'.format(n=n_distributions), 'Median of {n}'.format(n=n_distributions)]\n",
     "\n",
     "for axis, data, title in zip(axes, data_source, titles):\n",
     "    axis.imshow(data.reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The effect of outliers\n",
+    "## The effect of outliers\n",
     "\n",
     "Suppose that, in just one of the 100 distributions we are combining, there are a small number of extreme values. In astronomical images these extremes happen very frequently because of cosmic ray hits on the detector that cause, in one small patch of a calibration image, much higher counts. Another case is when combining twilight flats, which often contain faint images of stars.\n",
     "\n",
@@ -155,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember, we can think of the values in this distribution as an image, a view that will be paraticularly convenient in this case."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -163,7 +171,15 @@
     "plt.imshow(bits[0, :].reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
     "plt.xticks([])\n",
     "plt.yticks([])\n",
+    "plt.title('One distribution with outliers')\n",
     "plt.grid(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we know what the outliers in this one (and *only* this one) distribution look like, we'll combine all of the distributions as we did above."
    ]
   },
   {
@@ -177,26 +193,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Even though only one out of the 100 \"images\" we are combining has these high pixel values, the distribution of pixels for the average is clearly affected (well, maybe not clearly, since seeing it requires a logarithmic $y$-axis). The distribution for the median looks the much the same as above. Since median simply looks for the middle value, an extreme value doesn't affect the result much."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hist(average, bins='freedman', alpha=0.5);\n",
-    "hist(median, bins='freedman', alpha=0.5);\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "hist(average, bins='freedman', alpha=0.5, label='average');\n",
+    "hist(median, bins='freedman', alpha=0.5, label='median');\n",
+    "plt.legend()\n",
+    "plt.xlabel('Counts')\n",
     "plt.semilogy();"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.imshow(average.reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
-    "plt.xticks([])\n",
-    "plt.yticks([])\n",
-    "plt.grid(False)"
+    "### Combining using the average has a noticeable effect on the result; median removes the artifact\n",
+    "\n",
+    "The effect of the outlier is *much* clearer if the distributions are displayed as images. If the distributions we are combining were calibration images then the outliers that appear in one image (e.g. a cosmic ray) would affect the combined image we hoped to use for calibration."
    ]
   },
   {
@@ -205,8 +228,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(median.reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
-    "plt.grid(False)"
+    "fig, axes = plt.subplots(1, 3, sharey=True, tight_layout=True, figsize=(20, 10))\n",
+    "data_source = [bits[0, :], average, median]\n",
+    "titles = ['One distribution with outliers', 'Average of {n}'.format(n=n_distributions), 'Median of {n}'.format(n=n_distributions)]\n",
+    "\n",
+    "for axis, data, title in zip(axes, data_source, titles):\n",
+    "    axis.imshow(data.reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
+    "    axis.set_xticks([])\n",
+    "    axis.set_yticks([])\n",
+    "    axis.grid(False)\n",
+    "    axis.set_title(title)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the one hand, the noise properties are better when you combine by taking the average. On the other hand, the median eliminates feaatures that appear in only one image.\n",
+    "\n",
+    "Astronomical images will almost always have those transient features. Even at an observatory near sea level in an exposure that is very short, cosmic ray hits are common."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The solution: Average combine, but clip the extreme values\n",
+    "\n",
+    "The answer here is to first clip extreme values from the distributions and then combine using the average. That rejects outlying values like the median but with the modestly better statistical properties of the average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Please do not use the code below for reducing your data...\n",
+    "\n",
+    "...in the next set of notebooks we'll walk through the package [ccdproc](https://ccdproc.readthedocs.io), which automates much of what you see below. The section below motivates and explains some of what is happening behind the scenes in [ccdproc](https://ccdproc.readthedocs.io)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sigma clipping\n",
+    "\n",
+    "Sigma clipping means calculating how \"far\" each pixel to be combined is from the \"typical\" value and excluding values from the combination if they are \"too far\" from the pixel value.\n",
+    "\n",
+    "To be clear, when evaluating which values to reject we are doing it for each of the 102,400 points in the distribution (or, if you prefer, each of the 320$\\times$320 pixels in the image) we are going to combine. In other words, for each point (or pixel), we'll compute a \"typical\" value for the 100 distributions (images) we are combining and exclude any from the average that are \"too far\" from the \"typical value\".\n",
+    "\n",
+    "What should be used as the \"typical\" value, and how do we measure how \"far\" away a value is, and how far is \"too far\"? \n",
+    "\n",
+    "The last question is easiest to answer: it depends a bit on the noise level in your camera but something like 5 farther from the \"typical\" value than most of the pixels are.\n",
+    "\n",
+    "Using the average as the typical value and the standard deviation as a measure of how far a particular value is from the typical value is often the wrong choice. The problem with this is that outlying values in a single distribution (or image) an strongly bias the average and exaggerate the standard deviation. In this toy example, where we are combining 100 distributions (images) using the average and standard deviation might work since there are so many distributions. A more typical number of bias or dark images that one might combine is 10 or 20. In that case an extreme value in one image strongly affects the mean and standard deviation.\n",
+    "\n",
+    "As an example, consider combining 10, 20 or 100 of our distributions, as shown in the cell below. Only in the case of 100 distributions would our extreme value of 2000 be excluded if we excluded values more than 5 times the standard deviation from the average."
    ]
   },
   {
@@ -215,8 +292,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(bits[1, :].reshape(n_side, n_side), vmin=bias_level - 3, vmax=bias_level + 3)\n",
-    "plt.grid(False)"
+    "print('Number combined\\t Average\\t Standard dev σ \\t 10σ ')\n",
+    "\n",
+    "for n_to_combine in [10, 20, n_distributions]:\n",
+    "    avg = np.mean(bits[:n_to_combine, 10000])\n",
+    "    std = np.std(bits[:n_to_combine, 10000])\n",
+    "    print('{n:10d}\\t{avg:10.2f}\\t{std:10.2f}\\t{ten_sig:10.2f}'.format(n=n_to_combine, \n",
+    "                                         avg=avg, \n",
+    "                                         std=std, ten_sig=10 * std))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A better choice is to use the median as the typical value and the *median absolute deviation* in place of the standard deviation as the measure of how far a value is from the typical value. The [median absolute deviation](https://en.wikipedia.org/wiki/Median_absolute_deviation), or MAD, of a set of points $x$ is defined by\n",
+    "$$\n",
+    "MAD = \\frac{1}{N}\\sum_{i=0}^N |x_i - \\text{median}(x)|.\n",
+    "$$\n",
+    "It is a measure of the typical absolute distance from the median of the set of values. The MAD is not directly equivalent to the standard deviation. The relationship between the two depends on the distribution of values, but for a Gaussian distribution multiplying the MAD by 1.4826 does the trick. The [astropy function `mad_std`](http://docs.astropy.org/en/stable/api/astropy.stats.mad_std.html) will calculate the MAD and multiply by the appropriate factor for you.\n",
+    "\n",
+    "\n",
+    "Repeating the calculation above but with median as the central value and the MAD in place of the standard deviation demonstrates that even for 10 distributions the extreme value will be excluded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('{:^20}{:^20}{:^20}{:^20}'.format('Number combined', 'Median', 'MAD σ', '10σ'))\n",
+    "\n",
+    "for n_to_combine in [10, 20, n_distributions]:\n",
+    "    avg = np.median(bits[:n_to_combine, 10000])\n",
+    "    std = mad_std(bits[:n_to_combine, 10000])\n",
+    "    print('{n:^20d}{avg:^20.2f}{std:^20.2f}{ten_sig:^20.2f}'.format(n=n_to_combine, \n",
+    "                                         avg=avg, \n",
+    "                                         std=std, ten_sig=10 * std))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The downside to using the median and median absolute deviation? They can be slow to compute for large images or large stacks of images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mad_sigma = mad_std(bits, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exclude = (bits - median) / mad_sigma > 10\n",
+    "exclude.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_values = bits[exclude]\n",
+    "bits[exclude] = np.nan\n",
+    "\n",
+    "clip_combine = np.nanmean(bits, axis=0)\n",
+    "bits[exclude] = original_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "#hist(average, bins='freedman', alpha=0.5, label='average');\n",
+    "hist(clip_combine, bins='freedman', alpha=0.5, label='clipped average')\n",
+    "hist(median, bins='freedman', alpha=0.5, label='median');\n",
+    "plt.legend()\n",
+    "plt.xlabel('Counts')\n",
+    "#plt.xlim(1000 - 0.6, 1000 + 0.6)"
    ]
   },
   {
@@ -243,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
