Complete draft of image notebook

--- a/notebooks/01.06-Image-combination.ipynb
+++ b/notebooks/01.06-Image-combination.ipynb
@@ -255,14 +255,14 @@
    "source": [
     "## The solution: Average combine, but clip the extreme values\n",
     "\n",
-    "The answer here is to first clip extreme values from the distributions and then combine using the average. That rejects outlying values like the median but with the modestly better statistical properties of the average."
+    "The answer here is to first clip extreme values from the distributions and then combine using the average. That rejects outlying values like the median but with the modestly better statistical properties of the average. A method called \"sigma clipping\" is used to remove the extreme calues"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Please do not use the code below for reducing your data...\n",
+    "#### Please do not use the code below for reducing your data...\n",
     "\n",
     "...in the next set of notebooks we'll walk through the package [ccdproc](https://ccdproc.readthedocs.io), which automates much of what you see below. The section below motivates and explains some of what is happening behind the scenes in [ccdproc](https://ccdproc.readthedocs.io)."
    ]
@@ -340,6 +340,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cells below perform the actual clipping; you should generally use the astropy function `sigma_clip` to do this, but here we'll do it manually to illustrate the process.\n",
+    "\n",
+    "We begin by calculating the MAD standard deviation estimator for our data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -349,13 +358,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The expression below is true for all of the points farther than $10 \\sigma_{MAD}$ from the median of the distributions and false everywhere else. This array will be used to exclude the extreme points."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exclude = (bits - median) / mad_sigma > 10\n",
-    "exclude.sum()"
+    "exclude = (bits - median) / mad_sigma > 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we calculate the average excluding the points identified as \"too far\" from from the median. There are two approaches one can take here. One is to use numpy masked arrays; the other is to temporarily set the excluded values to the special value `np.nan` and use a numpy function that excludes `nan` from the calculation. The latter approach is often faster than the former.\n",
+    "\n",
+    "The best approach is really to use a higher-level function from astropy for ccdproc. Those will take care of the details of implementing the clipping for you."
    ]
   },
   {
@@ -372,18 +396,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 10))\n",
-    "#hist(average, bins='freedman', alpha=0.5, label='average');\n",
-    "hist(clip_combine, bins='freedman', alpha=0.5, label='clipped average')\n",
-    "hist(median, bins='freedman', alpha=0.5, label='median');\n",
-    "plt.legend()\n",
-    "plt.xlabel('Counts')\n",
-    "#plt.xlim(1000 - 0.6, 1000 + 0.6)"
+    "## Summary\n",
+    "\n",
+    "Combine images by first excluding extreme values using sgima clipping with median as the typical value and the median absolute deviation estimator of the standard deviation and then average the remaining pixels across all of the images.\n",
+    "\n",
+    "Note in the distribution below that the clipped average is a narrower distribution (less noise) than the median but that it still excludes the extreme value that appeared in one image."
    ]
   },
   {
@@ -391,7 +411,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(10, 10))\n",
+    "hist(clip_combine, bins='freedman', alpha=0.5, label='clipped average')\n",
+    "hist(median, bins='freedman', alpha=0.5, label='median');\n",
+    "plt.legend()\n",
+    "plt.xlabel('Counts')\n"
+   ]
   }
  ],
  "metadata": {
@@ -410,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
