--- a/notebooks/02.01-Inspect-your-images-and-make-a-choice-about-next-steps.ipynb
+++ b/notebooks/02.01-Inspect-your-images-and-make-a-choice-about-next-steps.ipynb
@@ -4,11 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inspect your images and make a choice about next steps\n"
+    "# Inspect your images and make a choice about next steps"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
