Fill in Howell reference

--- a/notebooks/01.00-Understanding-an-astronomical-CCD-image.ipynb
+++ b/notebooks/01.00-Understanding-an-astronomical-CCD-image.ipynb
@@ -31,11 +31,9 @@
     "\n",
     "The number stored in a raw astronomical image straight off a telescope is called an Analog Digital Unit (ADU) or count, because internally the camera converts an analog voltage in each pixel to a numerical count. The counts of interest to an astronomer are the ones generated via the photoelectric effect when a photon hits the detector. The number of photons (or equivalently, electrons) that reached the pixel is related to the counts in the pixel by the gain.\n",
     "\n",
-    "The gain is typically provided by the manufacturer of the camera and can be measured in a strightforward way from a combination of bias and flat images (Howell 2002; p. XXXX)\n",
+    "The gain is typically provided by the manufacturer of the camera and can be measured in a strightforward way from a combination of bias and flat images (Howell 2002; p. 71)\n",
     "\n",
-    "TODO: Howel reference detail\n",
-    "\n",
-    "**Note well** that trying to convert a raw image count to photons/electrons by multiplying by the gain will not be meaningful because the raw counts include contributions from sources other than light,"
+    "**Note well** that trying to convert a raw image count to photons/electrons by multiplying by the gain will not be meaningful because the raw counts include contributions from sources other than light."
    ]
   },
   {
@@ -71,6 +69,15 @@
     "+ Dead pixels, which are pixels that don't respond to light, cannot be corrected for.\n",
     "\n",
     "**Flat** corrections attempt to remove many of these effects. The idea is to image something which is uniformly illuminated as a way to measure variations in sensitivity (regardless fo cause) and compensate for them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "Howell, S., *Handbook of CCD Astronomy*, Second Ed, Cambridge University Press 2006 "
    ]
   }
  ],
