Add discussion of overscan

--- a/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
+++ b/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "from astropy.nddata import CCDData\n",
     "from astropy.visualization import hist\n",
-    "\n",
+    "from ccdproc import subtract_overscan\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from convenience_functions import show_image\n",
@@ -138,7 +138,7 @@
     "plt.plot(master.data[1000, :], label='100 combined')\n",
     "plt.grid()\n",
     "plt.legend()\n",
-    "#plt.xlim(4000, 4110)"
+    "#plt.xlim(0, 20)"
    ]
   },
   {
@@ -183,6 +183,179 @@
     "plt.grid()\n",
     "plt.legend()\n",
     "plt.xlim(980, 1060)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccd_eteq = CCDData.read('python_imred_data/ccd.001.0.fits.gz', unit='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_image(ccd_eteq)\n",
+    "plt.xlim(2000,2080)\n",
+    "plt.ylim(0,150);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,10))\n",
+    "plt.plot(ccd_eteq.data[1000, 2040:], label='single image')\n",
+    "plt.grid()\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccd_eteq.header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccddata_g = CCDData.read('python_imred_data/ccd.037.0.fits.gz', unit='count')\n",
+    "ccddata_g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_image(ccddata_g)\n",
+    "plt.xlim(2000,2080)\n",
+    "plt.ylim(0,150);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccddata_g.header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_eteq = CCDData.read('python_imred_data/ccd.014.0.fits.gz', unit='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,10))\n",
+    "# plt.plot(ccddata_g.data[1000, 2040:], label='single image')\n",
+    "# plt.plot(ccddata_g.data[:, 2040:].mean(axis=0), label='single image avg')\n",
+    "# plt.plot(ccd_eteq.data[1000, 2040:], label='bias image')\n",
+    "# plt.plot(ccd_eteq.data[:, 2040:].mean(axis=0), label='bias image avg')\n",
+    "# plt.plot(flat_eteq.data[1000, 2040:], label='flat image')\n",
+    "# plt.plot(flat_eteq.data[:, 2040:].mean(axis=0), label='flat image avg')\n",
+    "plt.plot(ccddata_g.data[1000, :], label='single image')\n",
+    "plt.plot(ccddata_g.data.mean(axis=0), label='single image avg')\n",
+    "plt.plot(ccd_eteq.data[1000, :], label='bias image')\n",
+    "plt.plot(ccd_eteq.data.mean(axis=0), label='bias image avg')\n",
+    "plt.plot(flat_eteq.data[1000, :], label='flat image')\n",
+    "plt.plot(flat_eteq.data.mean(axis=0), label='flat image avg')\n",
+    "plt.grid()\n",
+    "plt.axvline(x=2048, color='black', linewidth=3, linestyle='dashed', label='start of overscan')\n",
+    "plt.legend()\n",
+    "plt.ylim(1000, 2000)\n",
+    "plt.xlim(2040, 2090)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wasp = CCDData.read('wasp-10-b-S001-R001-C041-r.fit', unit='adu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dark1000 = CCDData.read('dark-test-0002d1000.fit', unit='adu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat = CCDData.read('AutoFlat-PANoRot-r-Bin1-006.fit', unit='adu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20,10))\n",
+    "plt.plot(wasp.data[1000, :], label='night sky')\n",
+    "plt.plot(wasp.data.mean(axis=0), label='night sky average')\n",
+    "plt.plot(master.data[1000, :], label='100 bias combined')\n",
+    "plt.plot(dark1000.data[1000, :], label='single 1000sec dark')\n",
+    "plt.plot(dark1000.data.mean(axis=0), label='1000sec dark average')\n",
+    "plt.plot(flat.data[1000, :], label='single flat')\n",
+    "plt.plot(flat.data.mean(axis=0), label='flat average')\n",
+    "plt.grid()\n",
+    "plt.legend()\n",
+    "plt.axvline(x=4096, color='black', linewidth=3, linestyle='dashed', label='start of overscan')\n",
+    "plt.xlim(4080, 4110)\n",
+    "plt.ylim(900, 1400)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bias_08_22 = CCDData.read('Bias-S001-R001-C016-NoFilt.fit')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(bias_08_22.data[:, :4096].mean(axis=1), alpha=0.5)\n",
+    "plt.plot(bias_08_22.data[:, 4097:].mean(axis=1) - 40, alpha=0.3)"
    ]
   },
   {
