Change image locations to URLs to compressed images

--- a/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
+++ b/notebooks/02.00-Handling-overscan,-trimming,-and-bias-subtraction.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "## A sample bias image\n",
     "\n",
-    "The image below is a single bias frame from an [Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a [Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level around 1000 and read noise around 10 e$^-$, though the precise value from camera to camera."
+    "The image below is a single bias frame from an [Andor Apogee Aspen CG16M](http://www.andor.com/pdfs/specifications/Apogee_Aspen_CG16M_Specifications.pdf), a low-end 4k × 4k CCD with a [Kodak KAF-16803 sensor chip](http://www.onsemi.com/pub/Collateral/KAF-16803-D.PDF). That model camera has a typical bias level around 1000 and read noise around 10 $e^-$, though the precise value varies from camera to camera and with temperature."
    ]
   },
   {
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit', unit='adu')"
+    "one_bias = CCDData.read(download_base_url + 'dark-test-0100bias.fit.gz', unit='adu')"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "master = CCDData.read(download_base_url + 'master_bias.fit', unit='adu')"
+    "master = CCDData.read(download_base_url + 'master_bias.fit.gz', unit='adu')"
    ]
   },
   {
@@ -138,7 +138,7 @@
     "plt.plot(master.data[1000, :], label='100 combined')\n",
     "plt.grid()\n",
     "plt.legend()\n",
-    "#plt.xlim(0, 20)"
+    "# plt.xlim(0, 20)"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wasp = CCDData.read('wasp-10-b-S001-R001-C041-r.fit', unit='adu')"
+    "wasp = CCDData.read(download_base_url + 'wasp-10-b-S001-R001-C041-r.fit.gz', unit='adu')"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark1000 = CCDData.read('dark-test-0002d1000.fit', unit='adu')"
+    "dark1000 = CCDData.read(download_base_url + 'dark-test-0002d1000.fit.gz', unit='adu')"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat = CCDData.read('AutoFlat-PANoRot-r-Bin1-006.fit', unit='adu')"
+    "flat = CCDData.read(download_base_url + 'AutoFlat-PANoRot-r-Bin1-006.fit.gz', unit='adu')"
    ]
   },
   {
@@ -338,32 +338,6 @@
     "plt.xlim(4080, 4110)\n",
     "plt.ylim(900, 1400)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bias_08_22 = CCDData.read('Bias-S001-R001-C016-NoFilt.fit')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(bias_08_22.data[:, :4096].mean(axis=1), alpha=0.5)\n",
-    "plt.plot(bias_08_22.data[:, 4097:].mean(axis=1) - 40, alpha=0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -382,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
